[gd_scene load_steps=4 format=3 uid="uid://d1wb3xvqcr2rd"]

[ext_resource type="Script" path="res://Enemy/blue_arrow.gd" id="1_f33ya"]
[ext_resource type="Texture2D" uid="uid://cuf4i3405h6u2" path="res://Enemy/blue_arrow.png" id="1_ujpy5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ttmt5"]
size = Vector2(5, 4)

[node name="blue_arrow" type="Area2D"]
collision_layer = 16
collision_mask = 32
script = ExtResource("1_f33ya")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1, 0.833333)
texture = ExtResource("1_ujpy5")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
position = Vector2(-2.38419e-07, 2.38419e-07)
scale = Vector2(0.4, 0.4)

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ttmt5")

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 3
hit_from_inside = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
